# reversi_rs

./: Cargo.toml  LICENSE  game_with_webversi.txt  without_rayon.txt
game_runner/: Cargo.toml
game_runner/src/: main.rs
lib_agents/: Cargo.toml
lib_agents/src/: human_agent.rs  lib.rs  mcts_agent.rs  random_agent.rs  util.rs
lib_agents/src/mcts_agent/: agent.rs  mcts_data.rs  tree_search.rs  tree_search_par.rs
lib_boardgame/: Cargo.toml
lib_boardgame/src/: game_primitives.rs  game_runner.rs  lib.rs  test_impls.rs
lib_boardgame/src/test_impls/: game_state_test_impl.rs  game_test_impl.rs
lib_connect_four/: Cargo.toml
lib_connect_four/src/: connect_four.rs  lib.rs
lib_printer/: Cargo.toml
lib_printer/src/: lib.rs
lib_reversi/: Cargo.toml
lib_reversi/src/: agents.rs  game_primitives.rs  lib.rs  nboard_engine.rs  reversi.rs  reversi_action.rs  reversi_board.rs  reversi_gamestate.rs  util.rs
lib_reversi/src/agents/: human.rs  mcts.rs  mcts_agent.rs  random_agent.rs
lib_reversi/src/agents/mcts/: tree_search.rs
lib_reversi/src/agents/mcts_agent/: tree_search.rs
lib_reversi/src/nboard_engine/: engine.rs  util.rs
lib_reversi/src/reversi/: reversi.rs  reversi_gamestate.rs  util.rs
lib_tic_tac_toe/: Cargo.toml
lib_tic_tac_toe/src/: lib.rs  tic_tac_toe.rs  tic_tac_toe_gamestate.rs
monte_carlo_tree/: Cargo.toml
monte_carlo_tree/src/: amonte_carlo_data.rs  arc_tree.rs  atree.rs  dot_visualize.rs  lib.rs  monte_carlo_data.rs  rc_tree.rs  tree.rs  util.rs  write_once_lock.rs
reversi_nboard_runner/: Cargo.toml
reversi_nboard_runner/src/: engine.rs  main.rs  util.rs
src/: agents.rs  game_primitives.rs  lib.rs  reversi.rs
src/agents/: random_agent.rs
src/reversi/: reversi_gamestate.rs  util.rs
util/: Cargo.toml
util/src/: lib.rs
