[package]
name = "game_runner"
version = "0.1.0"
authors = ["andy <andysalerno@gmail.com>"]
edition = "2018"

[dependencies]
lib_reversi = { path = "../lib_reversi" }
lib_tic_tac_toe = { path = "../lib_tic_tac_toe" }
lib_boardgame = { path = "../lib_boardgame" }
lib_agents = { path = "../lib_agents" }
lib_printer = { path = "../lib_printer" }