[package]
name = "lib_agents"
version = "0.1.0"
authors = ["andy salerno <andysalerno@gmail.com>"]
edition = "2018"

[dependencies]
lib_boardgame = {path = "../lib_boardgame" }
monte_carlo_tree = {path = "../monte_carlo_tree" }
lib_tic_tac_toe = {path = "../lib_tic_tac_toe" }
lib_reversi = {path = "../lib_reversi" }
rand = "0.6"
rand_xorshift = "0.2.0"
rayon = "1.1.0"